--- a/KSTests.tex
+++ b/KSTests.tex
@@ -1,3 +1,5 @@
+The accuracy of \osprey 3.0 was first tested for the subset of algorithms also available in \osprey 2.2$\beta$, by running both versions of \osprey on the same test cases and checking that the results matched.  Since the accuracy of \osprey 2.2$\beta$ using these algorithms has been experimentally confirmed (see Introduction), by transitivity, our tests confirmed \osprey 3.0's accuracy.  In addition, we performed new, retrospective tests, described below.    
+
 To evaluate the accuracy of the implementation of the newest optimizations in \osprey 3.0, we performed a series of designs for a variety of protein-protein interfaces (PPIs) as retrospective validation. We used \ks \cite{K*} to computationally predict experimentally measured changes in binding for each PPI. Each protein structure is listed by name and PDB ID in Table \ref{table:spearman} \cite{pdb1x1u,pdb2pcb,pdb3s9d,pdb2b5i}.  These systems include barnase with its peptide inhibitor barstar \cite{binding2barnase,bindingbarnase}, the cytochrome {\it c}:cytochrome {\it c} peroxidase complex \cite{bindingcytc}, interferon $\alpha$-2 (IFN$\alpha$2) in complex with interferon $\alpha/\beta$ receptor 2 (IFNAR2)\cite{bindingifna2}, and the interleukin 2 (IL-2):IL-2 receptor $\alpha$ (IL-2R$\alpha$) complex \cite{bindingil2}.
 
 Our retrospective validation experiments focused on mutations at residues in or proximal to the protein-protein interface that were not limited to alanine scanning. Including some of these tested and reported mutations \cite{binding2barnase,bindingbarnase,bindingcytc,bindingifna2,bindingil2}, for each structure we tested anywhere from 5 to 19 designs. In total, we tested 58 mutations using default, out-of-the-box \osprey 3.0 settings and parameters. Each design included one or two mutable residues along with a set of surrounding flexible residues (See Table \ref{table:spearman}). Flexible residues were chosen by selecting all residues within 4 {\AA} of the mutable residues and removing those which only have backbone interactions. Two example designs are shown in Figure \ref{fig:designs}, where \osprey 3.0 and \ks accurately predict the effect of two point mutations in the interface of the IFN$\alpha$2:IFNAR2 complex (highlighted in blue in Table \ref{table:spearman}). 
