--- a/coverletter.tex
+++ b/coverletter.tex
@@ -25,7 +25,7 @@ Dear Madam/Sir,
 
 We are writing to submit a manuscript entitled ``{\sc osprey} 3.0: Open-Source Protein Redesign for You, with Powerful New Features'' to the {\em Journal of Computational Chemistry}.  
 
-Protein and drug design algorithms enable the development of new therapeutics that might be impossible or too expensive to discover using experimental methods.  For over a decade, my lab has been working on the \osprey software package, which implements unique and powerful algorithms for this problem.  \osprey is distinguished by its combination of algorithms with provable guarantees of accuracy, modeling of continuous flexibility and free energy, and ability to search very large sequence spaces efficiently.  
+Protein and drug design algorithms enable the development of new therapeutics that might be impossible or too expensive to discover using experimental methods.  For over a decade, my lab has been working on the \osprey software package, which implements unique and powerful algorithms for this problem.  \osprey is distinguished by its combination of algorithms with provable guarantees of accuracy, modeling of continuous flexibility and free energy using Boltzmann-weighted conformational ensembles, and ability to search very large sequence spaces efficiently.  
 
 In this paper, we present the third major release of \osprey.  \osprey 3.0 offers substantial improvements in three areas: performance, new algorithms, and ease of use.  We believe the new algorithms significantly improve both efficiency and the realism of the biophysical model.  The performance and ease-of-use improvements will greatly facilitate the use of both the new and old algorithms in empirical designs.  Like previous versions of \osprey, \osprey 3.0 is available as open-source, and unlike previous releases it is already available on Github.  This paper also presents benchmark results, which provide significant new evidence for the accuracy of the software and the algorithms and models from which it was built.  
 
