Bruce's text comments

--- a/CATS.tex
+++ b/CATS.tex
@@ -1,4 +1,4 @@
-{\sc osprey} pioneered protein design calculations that model local continuous flexibility of sidechains in the vicinity of rotamers in all biophysically feasible dimensions (i.e., the sidechain dihedrals).  This continuous flexibility was often critical in correctly identifying energetically favorable sequences~\cite{iMinDEE}, especially when those sequences falsely appeared to be sterically clashing when modeled using only rigid rotameric conformations taken from a rotamer library.  In {\sc osprey} 3.0, we now extend this ability to the backbone: allowing local continuous backbone flexibility in the vicinity of the native backbone with respect to all biophysically feasible degrees of freedom.  
+{\sc osprey} pioneered protein design calculations that model local continuous flexibility of sidechains in the vicinity of rotamers in all biophysically feasible dimensions (i.e., the sidechain dihedrals).  This continuous flexibility was often critical in correctly predicting energetically favorable sequences~\cite{iMinDEE,OSPREY_MIE}, especially when those sequences falsely appeared to be sterically clashing when modeled using only rigid rotameric conformations taken from a rotamer library (see section on GPU acceleration above for more details).  In {\sc osprey} 3.0, we now extend this ability to the backbone: allowing local continuous backbone flexibility in the vicinity of the native backbone with respect to all biophysically feasible degrees of freedom.  
 
 \begin{figure}
 \includegraphics[width=2in,height=1.7in]{figures/cats_confs.png}\hspace{0.2in}\includegraphics[width=2in,height=1.5in]{figures/w54_rigidBB_clashes.png}\hspace{0.2in}\includegraphics[width=2in,height=1.5in]{figures/w54_overlay.png}
