--- a/BWM.tex
+++ b/BWM.tex
@@ -6,4 +6,4 @@ Because energy decreases as a function of distance, many protein design algorith
 
 {\bwmstar}, unlike treewidth-based methods that also exploit the sparsity of pairwise residue interactions to efficiently compute the GMEC~\cite{treewidth}, enumerates a gap-free list of conformations in order of increasing sparse energy. Because this list is gap-free, {\bwmstar} not only computes the GMEC of the sparse energy function, but also recovers the GMEC of the full energy function, as shown in Ref.~\citen{BWM*}. By enumerating all conformations within the provable sparse energy bound between the sparse and full GMEC, {\bwmstar} computes a list of conformations which is guaranteed to contain the full GMEC, as well as the sparse GMEC.  Moreover, because {\bwmstar} can enumerate conformations in gap-free order up to any energy threshold specified by the user, it can be used to accurately compute partition functions, and thus binding free energies that account correctly for entropy, using the \ks algorithm~\cite{K*,minDEE}.  
 
-Thus, in practice, {\bwmstar} circumvents the worst-case complexity of traditional methods such as \as for designs with sparse energy functions, computing the sparse GMEC in \Oh$(nw^2q^{\frac{3}{2}w})$ time, but enumerates each additional conformation in merely \Oh$(n\log q)$ time, which is up to three orders of magnitude faster than traditional \as in practice~\cite{BWM*}.
+Thus, in practice, {\bwmstar} circumvents the worst-case complexity of traditional methods such as \as for designs with sparse energy functions, computing the sparse GMEC of an $n$-residue design with at most $q$ rotamers per residue in \Oh$(nw^2q^{\frac{3}{2}w})$ time, and also enumerates each additional conformation in merely \Oh$(n\log q)$ time, which is up to three orders of magnitude faster than traditional \as in practice~\cite{BWM*}.
