BBK* figure update

--- a/BBKS.tex
+++ b/BBKS.tex
@@ -14,7 +14,7 @@ These improvements show that \bbks not only accelerates protein designs that wer
 
 \begin{figure}
 \center
-\includegraphics[width=4in]{figures/bbks.png}
-\caption{Running times for \bbks and single-sequence \ks vs. the number of sequences in the search space for 204 protein design test cases, described in Ref.~\citen{BBK*}.  Single-sequence \ks completed only 107 of the test cases within the 30-day time limit (left of the vertical line), and took up to 800 times longer than \bbks to do so, while \bbks completed all the designs within the time limit.  Figure reprinted with permission from Ref.~\citen{BBK*}.  }
+\includegraphics[width=6.5in]{figures/bbks.png}
+\caption{\textbf{Measuring the contributions of the \bbks~\cite{BBK*} algorithmic improvements to the empirically observed running times of \osprey.}  \bbks calculations were run to predict either the single top sequence or to enumerate the top 5, and were compared to exhaustive computation of \ks scores for each sequence (i.e., iMinDEE/\as/\ks or single-sequence \ks), which was the prior state of the art for Boltzmann-weighted ensemble-based binding affinity computation before \bbks.  (A) Running times for \bbks and single-sequence \ks vs. the number of sequences in the search space for 204 protein design test cases, a benchmark set described in Ref.~\citen{BBK*}.  Single-sequence \ks completed only 107 of the test cases within a 30-day time limit (left of the vertical line), and took up to 800 times longer than \bbks to do so, while \bbks completed all the designs within the time limit.  (B) The number $N$ of sequences whose energies must be examined or bounded by iMinDEE/\as/\ks (green line; exponential in the number of mutable residue positions) and by \bbks (dots). For each data point representing a \bbks test case, the vertical gap between that data point and the green line (gap on the Y axis) represents the number of sequences that are pruned without ever having to be examined.  Figure adapted with permission from Ref.~\citen{BBK*}.  }
 \label{fig:bbks}
 \end{figure}
