--- a/references.bib
+++ b/references.bib
@@ -2282,6 +2282,17 @@
   publisher={Elsevier}
 }
 
+@article{2RL0,
+  title={Crystal structures of fibronectin-binding sites from {Staphylococcus aureus FnBPA} in complex with fibronectin domains},
+  author={Bingham, Richard J and Rudi{\~n}o-Pi{\~n}era, Enrique and Meenan, Nicola AG and Schwarz-Linek, Ulrich and Turkenburg, Johan P and H{\"o}{\"o}k, Magnus and Garman, Elspeth F and Potts, Jennifer R},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={105},
+  number={34},
+  pages={12254-12258},
+  year={2008},
+  publisher={National Acad Sciences}
+}
+
 
 
 
