Clarification of PF tests

--- a/Astar.tex
+++ b/Astar.tex
@@ -15,7 +15,7 @@ Combined together, these optimizations to single-threaded performance made \ospr
 
 \begin{table}
 \caption{
-Details of 45 protein design test cases run on both \osprey 2.2 and \osprey 3.0.  Test cases primarily adapted from Ref.~\citen{EPIC}.  $^a$ Y indicates a partition function calculation (using the $K^*$ algorithm and thus a thermodynamic ensemble of conformations); N indicates calculation of the single global minimum-energy conformation (GMEC). }
+Details of 45 protein design test cases run on both \osprey 2.2 and \osprey 3.0.  Test cases primarily adapted from Ref.~\citen{EPIC}.  $^a$ Y indicates a partition function calculation (a subroutine of the $K^*$ algorithm~\cite{K*,minDEE}), which analyzes a thermodynamic ensemble of conformations; N indicates calculation of the single global minimum-energy conformation (GMEC). }
 \resizebox{\textwidth}{!}{
 \begin{tabular}{|p{1.9in}|p{0.5in}|p{0.3in}|p{0.6in}|p{0.75in}|p{0.75in}|p{0.75in}|}
 \hline
